# MultiWebCam

./: README.md  camera.py
multiwebcam/: CMakeLists.txt  main.cpp
